# accel_tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  accel_data.csv  display_data.csv  memo.txt
build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
config/: acceltool.ini
include/acceltool/backend/: wireless_accelerometer_manager.h
include/acceltool/core/: app_config.h  data_types.h  sampling_session.h
include/acceltool/processing/: display_aggregator.h  magnitude_calculator.h
include/acceltool/utils/: blocking_queue.h  csv_writer.h  display_csv_writer.h  logger.h
src/: main.cpp
src/backend/: wireless_accelerometer_manager.cpp
src/core/: app_config.cpp  interactive_app.cpp  sampling_session.cpp
src/processing/: display_aggregator.cpp  magnitude_calculator.cpp
src/utils/: csv_writer.cpp  display_csv_writer.cpp  logger.cpp
